<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="mViewModel"
            type="weather.pusher.controllers.ViewModelSettings"/>
        <variable
            name="mPresenter"
            type="weather.pusher.views.presenters.PresenterSettings"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/weatherpusher_prple_gray_ps">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorSecondary">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/MaterialTheme.TextView"/>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/btm_nav_view_settings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/material_bottom_nav_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:menu="@menu/bottom_navigation_menu"
            app:labelVisibilityMode="labeled"
            style="@style/MaterialTheme.MtrlBtmNav">
        </com.google.android.material.bottomnavigation.BottomNavigationView>

        <RelativeLayout
            android:id="@+id/settings_layout_cache_gmail_username"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="@id/gd_wp_dx_20_hor"
            app:layout_constraintStart_toStartOf="@id/gd_wp_dx_10_ver"
            app:layout_constraintEnd_toEndOf="@id/gd_wp_dx_90_ver"
            style="@style/RoundedLinearLayout">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/material_tv_cache_gmail_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/mtv_cache_gmail_username"
                android:textColor="@color/colorPrimary"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/material_sm_cache_gmail_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/material_tv_cache_gmail_username"
                android:layout_alignParentEnd="true"
                android:gravity="start|center"
                android:onClick="@{() -> mPresenter.fireOnToggleCacheGmailUsername()}"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_layout_current_gmail_username"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="@id/gd_wp_dx_30_hor"
            app:layout_constraintStart_toStartOf="@id/gd_wp_dx_10_ver"
            app:layout_constraintEnd_toEndOf="@id/gd_wp_dx_90_ver"
            style="@style/RoundedLinearLayout">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/material_tv_gmail_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/mtv_current_location"
                android:textColor="@color/colorPrimary"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/material_tv_current_gmail_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/material_tv_gmail_username"
                android:layout_marginStart="100dp"
                android:gravity="start|center"
                android:text="@string/mtv_gmail_username"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_layout_cache_location"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="@id/gd_wp_dx_40_hor"
            app:layout_constraintStart_toStartOf="@id/gd_wp_dx_10_ver"
            app:layout_constraintEnd_toEndOf="@id/gd_wp_dx_90_ver"
            style="@style/RoundedLinearLayout">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/material_tv_cache_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/mtv_cache_location"
                android:textColor="@color/colorPrimary"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/material_sm_cache_location"
                android:layout_toEndOf="@id/material_tv_cache_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="start|center"
                android:onClick="@{() -> mPresenter.fireOnToggleCacheLocation()}"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_layout_current_location"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="@id/gd_wp_dx_50_hor"
            app:layout_constraintStart_toStartOf="@id/gd_wp_dx_10_ver"
            app:layout_constraintEnd_toEndOf="@id/gd_wp_dx_90_ver"
            style="@style/RoundedLinearLayout">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/material_tv_current_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/mtv_current_location"
                android:textColor="@color/colorPrimary"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/material_tv_current_location_gps"
                android:layout_toEndOf="@id/material_tv_current_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:gravity="start|center"
                android:text="@string/mtv_city_state_zip"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_10_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_20_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.20" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_30_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.30" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_40_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.40" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_50_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_60_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.60" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_70_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.70" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_80_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_90_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_10_hor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_20_hor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_30_hor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_40_hor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_50_hor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_60_hor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_70_hor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.70" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_80_hor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_wp_dx_90_hor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.90" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>